RESOLVED FIXED78712
[GTK] Page content is incorrectly translated whenh rendering pages for printing in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=78712
Summary [GTK] Page content is incorrectly translated whenh rendering pages for printi...
Carlos Garcia Campos
Reported 2012-02-15 06:55:47 PST
I forgot to add cairo_save/restore when rendering every page.
Attachments
Patch (3.03 KB, patch)
2012-02-15 06:59 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2012-02-15 06:59:49 PST
Created attachment 127178 [details] Patch I've also simplified the code to select the printer as suggested by Martin and Gustavo in bug #76172
Carlos Garcia Campos
Comment 2 2012-02-16 09:16:33 PST
Note You need to log in before you can comment on or make changes to this bug.