[GTK] Page content is incorrectly translated whenh rendering pages for printing in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=78712

Reviewed by Martin Robinson.

* WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::enumeratePrintersFunction):
Simplify the code to select the printer.
(WebKit::WebPrintOperationGtk::renderPage): Call cairo_save()
before rendering the page and cairo_restore() when page has been
rendered.

git-svn-id: svn://svn.chromium.org/blink/trunk@107948 bbb929c8-8fbe-4397-9dbb-9b2b20218538